[package]
name = "chartodo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
dirs = "5.0.1"
anyhow = "1.0.93"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
comfy-table = "7.1.3"
chrono = "0.4.38"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
